// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With external duplicate constants file 1`] = `
"
import { test as world } from \\"/world\\";
const test = someTag\`
      hello world
    \`;"
`;

exports[`With external file 1`] = `
"
import world from \\"/world\\";
const test = someTag\`
      hello world
    \`;"
`;

exports[`With external file with duplicate constants 1`] = `
"
import { test as world } from \\"/world\\";
const test = someTag\`
      hello world
    \`;"
`;

exports[`With multiple external files 1`] = `
"
import world from \\"/world\\";

const test = someTag\`
      hello world
    \`;"
`;

exports[`With tag 1`] = `
"
const world = \\"world\\";
const test = someTag\`
      hello world
    \`;"
`;

exports[`Without tag 1`] = `
"
const world = \\"world\\";
const test = \`
      hello world
    \`;"
`;
